fix modal issues and table header alignment

--- a/src/views/resources/styles/components/table.css
+++ b/src/views/resources/styles/components/table.css
@@ -15,6 +15,7 @@
     border-bottom-color: #707070 !important;
     padding: 10px 14px;
     background-color: transparent;
+    text-align: left;
 }
 
 .table td {
